GUI-1750: Alignment fixes for propagate input in scaling group wizard's tag editor

--- a/eucaconsole/static/css/pages/scalinggroup_wizard.css
+++ b/eucaconsole/static/css/pages/scalinggroup_wizard.css
@@ -50,4 +50,6 @@ form .row input[type="number"] { width: 3rem; }
 
 [data-abide] #capacity-section .error small.error { position: absolute; width: 15rem; left: 8px; bottom: -1.5rem; }
 
+#tag-editor.autoscale #autoscale-tag-name-input-div, #tag-editor.autoscale #autoscale-tag-value-input-div { position: relative; left: 2rem; }
+
 .launchconfig-value { line-height: 1.5rem; }
